# ClimateTestManager

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: quality.yml
docs/: ARCHITECTURE.md  BUSINESS_RULES.md  DEVELOPMENT.md
docs/decisions/: 0001-src-layout.md  0002-version-normative-rules.md  0003-legacy-ex-marking-column.md
scripts/: build_windows.ps1
src/: main.py
src/assets/: README.md
src/climatetest_manager/: __init__.py  app.py  config.py
src/climatetest_manager/database/: __init__.py  base.py  models.py  session.py
src/climatetest_manager/domain/: __init__.py  climate_rules.py  enums.py
src/climatetest_manager/repositories/: __init__.py  climate_tests.py
src/climatetest_manager/services/: __init__.py  climate_tests.py  scheduling.py
src/climatetest_manager/ui/: __init__.py  formatters.py  theme.py
src/climatetest_manager/ui/components/: __init__.py  metric_card.py
src/climatetest_manager/ui/views/: __init__.py  dashboard.py  new_test.py
tests/unit/: test_app.py  test_climate_rules.py  test_climate_test_service.py  test_config.py  test_database.py  test_formatters.py  test_new_test_view.py  test_scheduling.py
